--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
 		<meta name="author" content="Nathan Britt and Cecily Davis"/>
 		<link rel="shortcut icon" href="images/logo.png"/>
 		<link rel="stylesheet" href="styles.css"/>
@@ -34,7 +34,7 @@
 		<li><a href="#"><div class="nav-label">Contact</div><i class="fa-solid fa-envelope fa-xl"></i></a></li>
 		<li><a href="#"><div class="nav-label">FAQ's</div><i class="fa-solid fa-circle-question fa-xl"></i></a></li>
 		<li><a href="#"><div class="nav-label">Products</div><i class="fa-solid fa-compact-disc fa-xl"></i></a></li>
-		<li><a href="about.html"><div class="nav-label">About</div><i class="fa-solid fa-user-group fa-xl"></i></a></li>
+		<li><a href="../about/about.html"><div class="nav-label">About</div><i class="fa-solid fa-user-group fa-xl"></i></a></li>
 		<li><a href="#"><div class="nav-label">Page 5</div><i class=></i></a></li>
 	</ul>
 </nav>
