--- a/home/index.html
+++ b/home/index.html
@@ -18,14 +18,14 @@
             $(window).scroll(function(){
                 var scroll = $(window).scrollTop();
                 $('.header-background').css({
-                    filter:"blur(" + (scroll/100/10) + "px)"
+                    filter:"blur(" + (scroll/100) + "px)"
                 })
             })
         </script>
 
 		<div class="record-stack">
 			<div class="cover">
-				<img src="../images/logo.png">
+				<img src="../images/logo-white.png">
 			</div>
 
 			<div class="sleeve">
