--- a/home/index.html
+++ b/home/index.html
@@ -25,7 +25,7 @@
 
 		<div class="record-stack">
 			<div class="cover">
-				<img src="../images/logo-white.png">
+				<img src="../images/logo.png">
 			</div>
 
 			<div class="sleeve">
