--- a/home/index.html
+++ b/home/index.html
@@ -49,6 +49,7 @@
 				<li><a href="#"><div class="nav-label">Products</div><i class="fa-solid fa-compact-disc fa-xl"></i></a></li>
 				<li><a href="../about/about.html"><div class="nav-label">About</div><i class="fa-solid fa-user-group fa-xl"></i></a></li>
 				<li><a href="#"><div class="nav-label">Page 5</div><i class=></i></a></li>
+				<li><a href="../home/index.html"><div class="nav-label">Home</div><i class=></i></a></li>
 			</ul>
 		</nav>
 
