--- a/about/about.html
+++ b/about/about.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
 		<meta name="author" content="Nathan Britt and Cecily Davis"/>
-		<link rel="shortcut icon" href="../images/Logo.png"/>
+		<link rel="shortcut icon" href="../images/logo.png"/>
 		<link rel="stylesheet" href="about.css"/>
 		<script src="https://kit.fontawesome.com/4077adc3ea.js" crossorigin="anonymous"></script>
 	</head>
