--- a/about/about.html
+++ b/about/about.html
@@ -11,6 +11,15 @@
 
 	<body>
 
+    <div class="loader"><img src="../images/record-spin.gif"></div>
+			
+			<script>
+				window.onload = function() 
+				{
+					$('.loader').slideUp("slow");
+				};
+			</script>
+
         <div class="header-background"></div>
 
         <a class="logo-top" href="../home/index.html"></a>
