--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 	</head>
 
 	<body>
+			
+			<div class="loader"><img src="images/record-spin.gif"></div>
+			
+			<script>
+				window.onload = function() 
+				{
+					$('.loader').slideUp("slow");
+				};
+			</script>
 
 		<div class="header-background"></div>
 
