--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 
 		<div class="header-background"></div>
 
-<a class="logo-top" href="index.html"></a>
+<a class="logo-top" href="index.html">
+	<img src="images/png.png">
+</a>
 
 <div class="navbox">
 		<nav role="navigation">
