--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
 
 		<div class="header-background"></div>
 
-<a class="logo-top" href="index.html">
-	<img src="images/png.png">
-</a>
+		<a class="logo-top" href="index.html"></a>
 
 <div class="navbox">
 		<nav role="navigation">
