--- a/about/about.html
+++ b/about/about.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-	<head>
+    <head>
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimal-ui"/>
 		<meta name="author" content="Nathan Britt and Cecily Davis"/>
+		<title>Third Eye Curiosities | About</title>
 		<link rel="shortcut icon" href="../images/logo.png"/>
 		<link rel="stylesheet" href="about.css"/>
 		<script src="https://kit.fontawesome.com/4077adc3ea.js" crossorigin="anonymous"></script>
@@ -26,15 +27,15 @@
         
         <div class="navbox">
                 <nav role="navigation">
-                    <div id="menuToggle">
+                    <div class="menuToggle">
                       <input type="checkbox"/>
                         <span></span>
                         <span></span>
                         <span></span>
-                    <ul id="menu">
+                    <ul class="menu">
                       <li><a href="../index.html">Home</a></li>
                       <li><a href="../about/about.html">About</a></li>
-                      <li><a href="#">Info</a></li>
+                      <li><a href="../products/products.html">Products</a></li>
                       <li><a href="#">Contact</a></li>
                     </ul>
                    </div>
@@ -75,8 +76,6 @@
                     </script>
 
         <div class="center-text">Our Story</div>
-
-            <div class="body-background"></div>
 
 <hr>
         <p>
