--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimal-ui"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
 		<meta name="author" content="Nathan Britt and Cecily Davis"/>
 		<title>Third Eye Curiosities | Home</title>
 		<link rel="shortcut icon" href="images/logo.png"/>
