--- a/reviews/reviews.html
+++ b/reviews/reviews.html
@@ -6,7 +6,7 @@
     	<meta name="author" content="Nathan Britt and Cecily Davis"/>
     	<title>Third Eye Curiosities | About</title>
     	<link rel="shortcut icon" href="../images/logo.png"/>
-    	<link rel="stylesheet" href="about.css"/>
+    	<link rel="stylesheet" href="reviews.css"/>
     	<script src="https://kit.fontawesome.com/4077adc3ea.js" crossorigin="anonymous"></script>
 	</head>
 
@@ -107,94 +107,20 @@
 
 
 
-        <div class="center-text">Our Story</div>
-
-<div class="content">
+        <div class="center-text">Reviews</div>
 		
-        <div class="contR">
-			<div class="box">
-				<h1>Hunter:</h1>
-				<p>Owner and Co-Founder</p>
-			</div>
-          <div class="box">
-            <div class="img-cont">
-              <img src="../images/HunterFace.jpg">
-            </div>
-          </div>
+		<div class="button-container">
+			<a href="https://www.google.com/search?q=third+eye+curiosities&oq=th&aqs=chrome.0.69i59j69i57j0i433i512j46i199i433i465i512j46i433i512j69i60l3.550j0j7&sourceid=chrome&ie=UTF-8#lrd=0x887ea0fae71aaaab:0x8b90439b2231c385,3,,," class="review-button">Leave a Review!</a>
+		</div>
 
-        </div>
-        <div class="contL">
-          <div class="box">
-              <h1>Cam:</h1>
-			  <p>Co-Founder and whatever</p>
-          </div>
-          <div class="box">
-            <div class="img-cont">
-              <img src="../images/HunterAndTupac.jpg">
-            </div>
-          </div>
-        </div>
-<br><br><hr alig="center" style="width: 30%;"><br>
+		<iframe style="width:100vw" src="https://widget.tagembed.com/37853?view"></iframe> 
+		<script src="//widget.tagembed.com/embed.min.js" type="text/javascript"></script>
 
-        <div class="from">
-            <h1>Hunter Says,<br><br>"</h1>
-        </div>
 
-        <!--Top-->
-        <div class="contR">
-          <div class="box">
-              <p>
-              For starters, I saw a void in the music market
-              place in Jackson, TN. My entreprenurial nature
-              kicked in, and I decided to serve as a vinyl
-              dealer inside my friend's bookstore downtown...
-              </p>
-          </div>
-          <div class="box">
-            <div class="img-cont">
-              <img src="../images/HunterAndTupac.jpg">
-            </div>
-          </div>
-        </div>
-        <!--Middle-->
-        <div class="contL">
+		<div class="button-container">
+			<a href="https://www.google.com/search?q=third+eye+curiosities&oq=th&aqs=chrome.0.69i59j69i57j0i433i512j46i199i433i465i512j46i433i512j69i60l3.550j0j7&sourceid=chrome&ie=UTF-8&safe=active&ssui=on#lrd=0x887ea0fae71aaaab:0x8b90439b2231c385,1,,," class="review-button">Read More!</a>
+		</div>
 
-          <div class="box">
-              <p>
-              Once he moved locations, I started renting his old 
-              spot and became the only brick and mortar record shop 
-              between Memphis and Nashville...
-              </p>
-          </div>
-
-		<div class="box">
-            <div class="img-cont">
-              <img src="../images/WholeStore.jpg">
-            </div>
-          </div>
-		  </div>
-        <!--Bottom-->
-        <div class="contR">
-          <div class="box">
-              <p>
-              Music on vinyl seems to transcend age and gender. 
-              We believe in being reverential to music on a physical
-              format such as vinyl while also acting as purveyors 
-              of the album as an artform.
-              </p>
-          </div>
-          <div class="box">
-            <div class="img-cont">
-              <img src="../images/HunterAndCamGuitar2.jpg">
-            </div>
-          </div>
-        </div>
-
-	</div>
-
-	<div class="from">
-		<h1>"</h1><br><br>
-	</div>
 
 		<!--Footer-->
 		<footer>
@@ -233,6 +159,7 @@
 					<li><a href="mailto:thirdeyecuriosities@gmail.com"><i class="fa fa-envelope"></i></a></li>
 				</ul>
 		</footer>
+</div>
 
 	</body>
 </html>
