--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
 
 	<a class="logo-top" href="index.html"></a>
 
+		<div class="title-top">
+		<a href="index.html">Third Eye Curiosities</a>
+	</div>
+        
+
 <!--Navbar-->
 <div class="navbox">
 	<nav role="navigation">
@@ -47,12 +52,12 @@
 							<li><a href="mailto:thirdeyecuriosities@gmail.com"><i class="fa fa-envelope"></i></a></li>
 						</ul>
 					</li>
-				<li class="nav-animate nav-margin"><a href="index.html">Home</a></li>
-				<li class="nav-animate"><a href="about/about.html">About</a></li>
-				<li class="nav-animate"><a href="products/products.html">Products</a></li>
-				<li class="nav-animate"><a href="records/records.html">Records</a></li>
-				<li class="nav-animate"><a href="contact/contact.html">Contact</a></li>
-				<li class="nav-animate"><a href="gallery/gallery.html">Gallery</a></li>
+					<li class="nav-animate nav-margin"><a href="index.html">Home</a></li>
+					<li class="nav-animate"><a href="about/about.html">About</a></li>
+					<li class="nav-animate"><a href="products/products.html">Products</a></li>
+					<li class="nav-animate"><a href="reviews/reviews.html">Reviews</a></li>
+					<li class="nav-animate"><a href="contact/contact.html">Contact</a></li>
+					<li class="nav-animate"><a href="gallery/gallery.html">Gallery</a></li>
 				<li>
 					<ul class="nav-contact">
 						<li class="nav-animate"><a href="tel:7312676803">731.267.6803</a><br>
@@ -89,8 +94,6 @@
 		<div class="player">
 			<img src="images/RecordPlayer.png">
 		</div>
-
-<div class="placeholder"></div>
 
 	<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
         <script type="text/javascript">
@@ -129,6 +132,12 @@ document.documentElement.scrollTo({top: 0, behavior: 'smooth'});
 }
 </script>
 
+<div class="body-content">
+<h1>What to Know:</h1>
+<h2>We Sell Records!</h2>
+<h3>(and curiously curated items)</h3>
+<p>We're proud to be the ONLY brick-and-mortar record shop between Memphis and Nashville! Our small storefront means we're able to heavily curate the items you'll find inside, and we take immense pride in supporting the arts in Jackson!</p>
+</div>
 
 
 
@@ -141,7 +150,7 @@ document.documentElement.scrollTo({top: 0, behavior: 'smooth'});
 				<li><a href="index.html">Home</a></li>
 				<li><a href="about/about.html">About</a></li>
 				<li><a href="products/products.html">Products</a></li>
-				<li><a href="records/records.html">Records</a></li>
+				<li><a href="reviews/reviews.html">Reviews</a></li>
 				<li><a href="contact/contact.html">Contact</a></li>
 				<li><a href="gallery/gallery.html">Gallery</a></li>
 			</ul>
@@ -149,11 +158,26 @@ document.documentElement.scrollTo({top: 0, behavior: 'smooth'});
 		<hr style="width: 80%; height: 0.5px; border-width: 0; color: gray; background-color: gray;">
 		<div class="footer-info">
 			<p>
-				Third Eye Curiosities
+			Third Eye Curiosities
+			<div class="hours">
+				<p>HOURS: Monday - Saturday 11am - 5:30pm</p>
+			</div>
 				<hr style="width: 20%; height: 0.5px; border-width: 0; color: gray; background-color: gray;">
-				<div class="nav-animate footer-links"><a href="https://www.google.com/maps?q=116%20E.%20Baltimore,%20Jackson,%20TN,%2038301">116 E. Baltimore, Jackson TN, 38301</a><br><a href="tel:7312676803">731.267.6803</a><a id="divider">|</a><a href="mailto:thirdeyecuriosities@gmail.com">Email Us!</a></div>
+				<div class="nav-animate footer-links">
+					<a href="https://www.google.com/maps?q=116%20E.%20Baltimore,%20Jackson,%20TN,%2038301">116 E. Baltimore, Jackson TN, 38301</a><br>
+					<a href="tel:7312676803"><i class="fa fa-phone"></i> 731.267.6803</a>
+					<a id="divider">|</a>
+					<a href="mailto:thirdeyecuriosities@gmail.com"><i class="fa fa-envelope"></i> Email Us!</a>
+				</div>
 			</p>
 		</div>
+		<ul class="socials-footer">
+			<li><a href="https://www.facebook.com/thirdeyecuriosities/" class="fa fa-facebook"></a></li>
+			<li><a href="https://www.instagram.com/third_eye_curiosities/?hl=en" class="fa fa-instagram" id="insta"></a></li>
+			<li><a href="https://www.google.com/search?q=third+eye+curiosities&oq=th&aqs=chrome.0.69i59j69i57j0i433i512j46i199i433i465i512j46i433i512j69i60l3.550j0j7&sourceid=chrome&ie=UTF-8#lrd=0x887ea0fae71aaaab:0x8b90439b2231c385,1,,," class="fa fa-google"></a></li>
+			<li><a href="https://www.yelp.com/biz/third-eye-curiosities-jackson" class="fa fa-yahoo"></a></li>
+			<li><a href="mailto:thirdeyecuriosities@gmail.com"><i class="fa fa-envelope"></i></a></li>
+		</ul>
 </footer>
 
 
