--- a/reviews/reviews.html
+++ b/reviews/reviews.html
@@ -21,6 +21,8 @@
         		{
           		$('.loader').slideUp("slow");
         		};
+			
+			setTimeout(function(){loader.style.display = 'none';}, 2000);
     		</script>
 
         <div class="header-background"></div>
