--- a/reviews/reviews.html
+++ b/reviews/reviews.html
@@ -16,13 +16,17 @@
 
   			<div class="loader"><img src="../images/record-spin.gif"></div>
       
-      		<script>
-        		window.onload = function() 
-        		{
-          		$('.loader').slideUp("slow");
-        		};
-			
-			setTimeout(function(){loader.style.display = 'none';}, 2000);
+      		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+			  <script>
+$(window).on('load', function() {
+    $(".loader").slideUp("slow");
+});
+
+function newW()
+{
+    $(window).load();
+}
+setTimeout(newW, 1000);
     		</script>
 
         <div class="header-background"></div>
