--- a/gallery.html
+++ b/gallery.html
@@ -168,11 +168,11 @@ setTimeout(newW, 1000);
 						<div class="footer-nav">
 							<ul>
 								<li><a href="index.html">Home</a></li>
-								<li><a href="about/about.html">About</a></li>
-								<li><a href="products/products.html">Products</a></li>
-								<li><a href="reviews/reviews.html">Reviews</a></li>
-								<li><a href="contact/contact.html">Contact</a></li>
-								<li><a href="gallery/gallery.html">Gallery</a></li>
+								<li><a href="about.html">About</a></li>
+								<li><a href="products.html">Products</a></li>
+								<li><a href="reviews.html">Reviews</a></li>
+								<li><a href="contact.html">Contact</a></li>
+								<li><a href="gallery.html">Gallery</a></li>
 							</ul>
 						</div>
 						<hr style="width: 80%; height: 0.5px; border-width: 0; color: gray; background-color: gray;">
