--- a/products.html
+++ b/products.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
     	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
     	<meta name="author" content="Nathan Britt and Cecily Davis"/>
-    	<title>Third Eye Curiosities | About</title>
+    	<title>Third Eye Curiosities | Products</title>
 		<link rel="apple-touch-icon" sizes="180x180" href="images/favicon_w3cub/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="images/favicon_w3cub/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="images/favicon_w3cub/favicon-16x16.png">
@@ -20,7 +20,7 @@
 
 		<div class="loader"><img src="images/record-spin.gif"></div>
 
-        <div class="header-background-about"></div>
+        <div class="header-background-products"></div>
 
     <a class="logo-top" href="index.html"></a>
 
@@ -73,104 +73,28 @@
 
 
 
-        <div class="center-text">Our Story</div>
+        <div class="center-text">Products</div>
 
-<div class="content">
 
-	<br><br><hr width="30%"><br>
-		
-        <div class="contR">
-			<div class="box">
-				<div class="text-box-center">
-					<h1>Hunter Cross:</h1>
-					<p>Shop Owner<br>&<br>Record Dealer</p>
+	<br><p class="slider-info">Click the Icons!</p>
+	<div class="image-slideshow">
+		<div class="slider">
+				<div class="slides">
+					<div></div>
+			  		<div id="slide-1"><img src="images/THIRDEYESTORE0065.jpg"><span id="image-text-slider">Vinyl:<br><br>We offer a hand-picked selection of new, used, and vintage vinyl! We have the old classics, the new hits, and the bands you've yet to discover waiting for you!</span></div>
+			  		<div id="slide-2"><img src="images/THIRDEYESTORE0037.jpg"><span id="image-text-slider">Antiques:<br><br>Our shelves are stocked with miscellaneous antiques such as cameras, accessories, books, picures, and more!</span></div>
+			  		<div id="slide-3"><img src="images/THIRDEYESTORE0047 2.jpg"><span id="image-text-slider">Audio Equipment:<br><br>Record players, turn-tables, amplifiers, radios: We want you to be able to access the transcendent joy brought about through listening to vinyl records!</span></div>
+			  		<div id="slide-4"><img src="images/WoodenShelf 2.jpg"><span id="image-text-slider">Gifts:<br><br>There is something for everyone at Third Eye Curiosities. We have all the perfect gifts for friends and loved ones! Shop for your musical connoisseur, photographer, thrifter, etc!</span></div>
+			  		<div id="slide-5"><img src="images/THIRDEYESTORE0045 2.jpg"><span id="image-text-slider">Jewelry:<br><br>In addition to our antique collection of watches, hairpins, etc, Co-Owner Cameron Briley offers a selection of hand-made, retro-inspired jewelry!</span></div>
 				</div>
+			<div class="slider-labels">
+			<a href="#slide-1" class="slider-btn"><i class="fa fa-compact-disc"></i></a>
+			<a href="#slide-2" class="slider-btn"><i class="fa-solid fa-camera-retro"></i></a>
+			<a href="#slide-3" class="slider-btn"><i class="fa-solid fa-radio"></i></a>
+			<a href="#slide-4" class="slider-btn"><i class="fa-solid fa-gift"></i></a>
+			<a href="#slide-5" class="slider-btn"><i class="fa-solid fa-crown"></i></a>
 			</div>
-          <div class="box">
-            <div class="img-cont">
-              <img src="images/AboutHunter.jpg">
-            </div>
-          </div>
-
-        </div>
-        <div class="contL">
-          <div class="box">
-			<div class="text-box-center">
-              	<h1>Cameron Briley:</h1>
-			  	<p>Co-Owner</p>
-			</div>
-          </div>
-          <div class="box">
-            <div class="img-cont">
-              <img src="images/AboutCam.jpg">
-            </div>
-          </div>
-        </div>
-<br><br><hr width="30%"><br>
-
-        <div class="from">
-            <h1 style="margin-bottom: -15px">Hunter Says,<br><br>"</h1>
-        </div>
-
-        <!--Top-->
-        <div class="contR">
-          <div class="box">
-              <p id="about-para">
-              I saw a void in the music market
-              place in Jackson, TN. My entreprenurial nature
-              kicked in, and I decided to serve as a vinyl
-              dealer inside my friend's bookstore downtown...
-              </p>
-          </div>
-          <div class="box">
-            <div class="img-cont">
-              <img src="images/HunterAndTupac.jpg">
-            </div>
-          </div>
-        </div>
-        <!--Middle-->
-        <div class="contL">
-
-          <div class="box">
-              <p id="about-para">
-              Once he moved locations, I started renting his old 
-              spot and became the only brick and mortar record shop 
-              between Memphis and Nashville...
-              </p>
-          </div>
-
-		<div class="box">
-            <div class="img-cont">
-              <img src="images/WholeStore.jpg">
-            </div>
-          </div>
-		  </div>
-        <!--Bottom-->
-        <div class="contR">
-          <div class="box">
-              <p id="about-para">
-              Music on vinyl seems to transcend age and gender. 
-              We believe in being reverential to music on a physical
-              format such as vinyl while also acting as purveyors 
-              of the album as an artform.
-              </p>
-          </div>
-          <div class="box">
-            <div class="img-cont">
-              <img src="images/HunterAndCamGuitar2.jpg">
-            </div>
-          </div>
-        </div>
-
-	</div>
-
-	<div class="from">
-		<h1>"</h1>
-		<hr width="30%"><br><br><br>
-	</div>
-
-	<div class="button-container" style="margin-top: -100px;">
-		<a href="https://www.youtube.com/channel/UC5oxOIPIWba4Yj-Wkojz9tQ" class="review-button">Also: Check Out Our Band!</a>
+		</div>
 	</div>
 
 		<!--Footer-->
@@ -211,7 +135,6 @@
 				</ul>
 		</footer>
 	<script src="main.js"></script>
-	<script src="gallery.js"></script>
 	<script src="https://kit.fontawesome.com/4077adc3ea.js" crossorigin="anonymous"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	</body>
