--- a/index.html
+++ b/index.html
@@ -5,36 +5,29 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
 		<meta name="author" content="Nathan Britt and Cecily Davis"/>
 		<title>Third Eye Curiosities | Home</title>
-		<link rel="shortcut icon" href="images/logo.png"/>
+		<link rel="apple-touch-icon" sizes="180x180" href="images/favicon_w3cub/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="images/favicon_w3cub/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="images/favicon_w3cub/favicon-16x16.png">
+		<link rel="icon" href="images/favicon_w3cub/favicon.ico">
+		<link rel="manifest" href="images/favicon_w3cub/site.webmanifest">
 		<link rel="stylesheet" href="styles.css"/>
-		<script src="https://kit.fontawesome.com/4077adc3ea.js" crossorigin="anonymous"></script>
+		<script src="https://code.jquery.com/jquery-3.6.0.js" type="text/javascript"></script>
 	</head>
 
 	<body>
 
+		<style>::-webkit-scrollbar {display: none;}</style>
+
 		<!--Loading screen-->
 			
 		<div class="loader"><img src="images/record-spin.gif"></div>
-      
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-	  	<script>
-	  	$(window).on('load', function() {
-	  	$(".loader").slideUp("slow");
-	  	});
 
-	  	function newW()
-	  	{
-	  	$(window).load();
-	  	}
-	  	setTimeout(newW, 1000);
-	  	</script>
-
-		<div id=blur class="header-background-home"></div>
+		<div class="header-background-home"></div>
 
 	<a class="logo-top" href="index.html"></a>
 
 		<div class="title-top-home">
-		<a href="index.html">Third Eye Curiosities</a>
+		<a href="index.html">Third Eye Curiosities<br><span class="subtitle-home">(Vinyl and Antiques)</span></a>
 	</div>
         
 
@@ -53,7 +46,7 @@
 						<ul class="socials">
 							<li><a href="https://www.facebook.com/thirdeyecuriosities/" class="fa fa-facebook"></a></li>
 							<li><a href="https://www.instagram.com/third_eye_curiosities/?hl=en" class="fa fa-instagram" id="insta"></a></li>
-							<li><a href="https://www.google.com/search?q=third+eye+curiosities&oq=th&aqs=chrome.0.69i59j69i57j0i433i512j46i199i433i465i512j46i433i512j69i60l3.550j0j7&sourceid=chrome&ie=UTF-8#lrd=0x887ea0fae71aaaab:0x8b90439b2231c385,1,,," class="fa fa-google"></a></li>
+							<li><a href="https://bit.ly/38kGSJO" class="fa fa-google"></a></li>
 							<li><a href="https://www.yelp.com/biz/third-eye-curiosities-jackson" class="fa fa-yahoo"></a></li>
 							<li><a href="mailto:thirdeyecuriosities@gmail.com"><i class="fa fa-envelope"></i></a></li>
 						</ul>
@@ -101,50 +94,14 @@
 			<img src="images/RecordPlayer.png">
 		</div>
 
-	<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-        <script type="text/javascript">
-window.onscroll = function() {blur()};
-
-function blur() {
-  if (document.body.scrollTop > 50 || document.documentElement.scrollTop > 50) {
-    document.getElementById("blur").className = "header-background-home blur";
-  } else {
-    document.getElementById("blur").className = "header-background-home";
-  }
-}
-</script>
 
 
 
-
-
-<script>
-var mybutton = document.getElementById("to-top-button-container");
-
-window.onscroll = function() {scrollFunction()};
-
-function scrollFunction() {
-  if (document.body.scrollTop > 50 || document.documentElement.scrollTop > 50) {
-    mybutton.style.display = "block";
-  } else {
-    mybutton.style.display = "none";
-  }
-}
-
-function topFunction() {
-
-document.body.scrollTo({top: 0, behavior: 'smooth'});
-document.documentElement.scrollTo({top: 0, behavior: 'smooth'});
-}
-</script>
-
-<div class="body-content">
-<h1>What to Know:</h1>
-<h2>We Sell Records!</h2>
-<h3>(and curiously curated items)</h3>
+<div class="body-content home-text">
+<h1>We Sell Records!</h1>
+<h2>(and curiously curated items)</h2>
 <p>We're proud to be the ONLY brick-and-mortar record shop between Memphis and Nashville! Our small storefront means we're able to heavily curate the items you'll find inside, and we take immense pride in supporting the arts in Jackson!</p>
 </div>
-
 
 
 
@@ -170,7 +127,7 @@ document.documentElement.scrollTo({top: 0, behavior: 'smooth'});
 			</div>
 				<hr style="width: 20%; height: 0.5px; border-width: 0; color: gray; background-color: gray;">
 				<div class="nav-animate footer-links">
-					<a href="https://www.google.com/maps?q=116%20E.%20Baltimore,%20Jackson,%20TN,%2038301">116 E. Baltimore, Jackson TN, 38301</a><br>
+					<a onclick="mapsSelector()">116 E. Baltimore, Jackson TN, 38301</a><br>
 					<a href="tel:7312676803"><i class="fa fa-phone"></i> 731.267.6803</a>
 					<span id="divider">|</span>
 					<a href="mailto:thirdeyecuriosities@gmail.com"><i class="fa fa-envelope"></i> Email Us!</a>
@@ -180,7 +137,7 @@ document.documentElement.scrollTo({top: 0, behavior: 'smooth'});
 		<ul class="socials-footer">
 			<li><a href="https://www.facebook.com/thirdeyecuriosities/" class="fa fa-facebook"></a></li>
 			<li><a href="https://www.instagram.com/third_eye_curiosities/?hl=en" class="fa fa-instagram" id="insta"></a></li>
-			<li><a href="https://www.google.com/search?q=third+eye+curiosities&oq=th&aqs=chrome.0.69i59j69i57j0i433i512j46i199i433i465i512j46i433i512j69i60l3.550j0j7&sourceid=chrome&ie=UTF-8#lrd=0x887ea0fae71aaaab:0x8b90439b2231c385,1,,," class="fa fa-google"></a></li>
+			<li><a href="https://bit.ly/38kGSJO" class="fa fa-google"></a></li>
 			<li><a href="https://www.yelp.com/biz/third-eye-curiosities-jackson" class="fa fa-yahoo"></a></li>
 			<li><a href="mailto:thirdeyecuriosities@gmail.com"><i class="fa fa-envelope"></i></a></li>
 		</ul>
@@ -192,6 +149,8 @@ document.documentElement.scrollTo({top: 0, behavior: 'smooth'});
 
 
 
-
+	<script src="main.js"></script>
+	<script src="https://kit.fontawesome.com/4077adc3ea.js" crossorigin="anonymous"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	</body>
 </html>
