--- a/products.html
+++ b/products.html
@@ -81,11 +81,11 @@
 		<div class="slider">
 				<div class="slides">
 					<div></div>
-			  		<div id="slide-1"><img src="images/THIRDEYESTORE0065.jpg"><span id="image-text-slider">Vinyl:<br><br>We offer a hand-picked selection of new, used, and vintage vinyl! We have the old classics, the new hits, and the bands you've yet to discover waiting for you!</span></div>
-			  		<div id="slide-2"><img src="images/THIRDEYESTORE0037.jpg"><span id="image-text-slider">Antiques:<br><br>Our shelves are stocked with miscellaneous antiques such as cameras, accessories, books, picures, and more!</span></div>
-			  		<div id="slide-3"><img src="images/THIRDEYESTORE0047 2.jpg"><span id="image-text-slider">Audio Equipment:<br><br>Record players, turn-tables, amplifiers, radios: We want you to be able to access the transcendent joy brought about through listening to vinyl records!</span></div>
-			  		<div id="slide-4"><img src="images/WoodenShelf 2.jpg"><span id="image-text-slider">Gifts:<br><br>There is something for everyone at Third Eye Curiosities. We have all the perfect gifts for friends and loved ones! Shop for your musical connoisseur, photographer, thrifter, etc!</span></div>
-			  		<div id="slide-5"><img src="images/THIRDEYESTORE0045 2.jpg"><span id="image-text-slider">Jewelry:<br><br>In addition to our antique collection of watches, hairpins, etc, Co-Owner Cameron Briley offers a selection of hand-made, retro-inspired jewelry!</span></div>
+			  		<div id="slide-1"><img src="images/THIRDEYESTORE0065.jpg"><span id="image-text-slider">Vinyl:<br>We offer a hand-picked selection of new, used, and vintage vinyl! We have the old classics, the new hits, and the bands you've yet to discover waiting for you!</span></div>
+			  		<div id="slide-2"><img src="images/THIRDEYESTORE0037.jpg"><span id="image-text-slider">Antiques:<br>Our shelves are stocked with miscellaneous antiques such as cameras, accessories, books, picures, and more!</span></div>
+			  		<div id="slide-3"><img src="images/THIRDEYESTORE0047 2.jpg"><span id="image-text-slider">Audio Equipment:<br>Record players, turn-tables, amplifiers, radios: We want you to be able to access the transcendent joy brought about through listening to vinyl records!</span></div>
+			  		<div id="slide-4"><img src="images/WoodenShelf 2.jpg"><span id="image-text-slider">Gifts:<br>There is something for everyone at Third Eye Curiosities. We have all the perfect gifts for friends and loved ones! Shop for your musical connoisseur, photographer, thrifter, etc!</span></div>
+			  		<div id="slide-5"><img src="images/THIRDEYESTORE0045 2.jpg"><span id="image-text-slider">Jewelry:<br>In addition to our antique collection of watches, hairpins, etc, Co-Owner Cameron Briley offers a selection of hand-made, retro-inspired jewelry!</span></div>
 				</div>
 			<div class="slider-labels">
 			<a href="#slide-1" class="slider-btn"><i class="fa fa-compact-disc"></i></a>
