--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
 <div class="navbox">
 	<nav role="navigation">
 		<div class="menu-toggle">
-			<input type="checkbox"/>
+			<input type="checkbox">
 				<span></span>
 				<span></span>
 				<span></span>
+			</input>
 
 			<ul class="menu">
 			<div class="menu-container">
