--- a/index.html
+++ b/index.html
@@ -35,11 +35,10 @@
 <div class="navbox">
 	<nav role="navigation">
 		<div class="menu-toggle">
-			<input type="checkbox">
+			<input type="checkbox"/>
 				<span></span>
 				<span></span>
 				<span></span>
-			</input>
 
 			<ul class="menu">
 			<div class="menu-container">
@@ -96,7 +95,7 @@
 		</div>
 
 
-
+<div style="height: 40vh; background-color: transparent;"></div>
 
 <div class="body-content home-text">
 <h1>We Sell Records!</h1>
