--- a/contact.html
+++ b/contact.html
@@ -131,6 +131,6 @@
 	<script src="main.js"></script>
 	<script src="https://kit.fontawesome.com/4077adc3ea.js" crossorigin="anonymous"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-	<script async src="http://www.instagram.com/embed.js"></script>
+	<script src="http://www.instagram.com/embed.js"></script>
 	</body>
 </html>
